tests/cases/match/errors/match-bool-nonexhaustive.ari
fn main() -> i64 {
  return match true {
    true => 1,
  };
}
